# Project Metadata
[tool.poetry]
authors = [
  "Alexandra Zytek <zyteka@mit.edu>",
]

maintainers = [
  "MIT Data To AI Lab <dailabmit@gmail.com>",
]

description = "Library for evaluating and deploying human readable machine learning explanations."
name = "pyreal"
version = "0.2.0"

license = ""

readme = "README.md"

documentation = "https://sibyl-dev.github.io/pyreal"
homepage = "https://sibyl-ml.dev/"
repository = "https://github.com/DAI-Lab/pyreal"

keywords = ["pyreal", "Pyreal"]

classifiers = [
  'Intended Audience :: Developers',
  'Natural Language :: English',
]

exclude = []
include = ["AUTHORS.rst", "HISTORY.md"]

# Library Requirements
[tool.poetry.dependencies]

# Main Python Requirements
python = "^3.8, <3.11"

#Library Dependencies
eli5 = "^0.11.0"
matplotlib = "^3.5.1"
numpy = "~1.21.5" # Pinned because of shap->numba incompatibility
pandas = "^1.4.2"
scikit-learn = "^1.0.2"
shap = "^0.40.0"

# Example Dependencies
tensorflow = {version = "^2.8.0", optional = true}

# Development Requirements
[tool.poetry.dev-dependencies]

# Testing Dependencies
coverage = ">=6.3.2"
invoke = ">=1.7.0"
jupyter = ">=1.0.0"
pytest = ">=7.1.1"
pytest-cov = ">=3.0.0"
pytest-xdist = ">=2.5.0"
nbmake = "^1.3.0"

# Style Dependencies
autoflake = ">=1.4"
autopep8 = ">=1.6.0"
flake8 = ">=4.0.1"
isort = ">=5.10.1"

# Documentation Dependencies
PyYaml = ">=6.0"
Sphinx = ">=4.4.0"
argh = ">=0.26.2"
autodocsumm = ">=0.2.7"
ipython = ">=8.2.0"
m2r2 = ">=0.3.2"
nbsphinx = ">=0.8.8"
pydata-sphinx-theme = ">=0.8.1"

# Extra Dependency Bundles
[tool.poetry.extras]
examples = ["tensorflow"]

[tool.isort]
include_trailing_comma = true
line_length = 99
lines_between_types = 0
multi_line_output = 4
use_parentheses = true

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.1.13"]
