# Project Metadata
[tool.poetry]
authors = [
  "Alexandra Zytek <zyteka@mit.edu>"
]

maintainers = [
  "MIT Data To AI Lab <dailabmit@gmail.com>",
]

description = "Library for evaluating and deploying human readable machine learning explanations."
name = "pyreal"
version = "0.4.1"

license = ""

readme = "README.md"

documentation = "https://sibyl-dev.github.io/pyreal"
homepage = "https://sibyl-ml.dev/"
repository = "https://github.com/DAI-Lab/pyreal"

keywords = ["pyreal", "Pyreal"]

classifiers = [
  'Intended Audience :: Developers',
  'Natural Language :: English',
]

exclude = []
include = ["AUTHORS.rst", "HISTORY.md"]

# Library Requirements
[tool.poetry.dependencies]

# Main Python Requirements
python = "^3.8, <3.11"

#Library Dependencies
matplotlib = "^3.6.0"
numpy = "^1.23.3"
pandas = "^1.5.0"
scikit-learn = "^1.1.2"
numba = "^0.56.2" # Explicit numba (required by shap) forces recent version
shap = "=0.40.0" # Explicit shap prevents break with newer versions
lime = "^0.2.0.1"

# Example Dependencies
lightgbm = {version = "^3.3.2", optional = true}

# Development Requirements
seaborn = "^0.12.2"
[tool.poetry.dev-dependencies]

# Testing Dependencies
coverage = ">=6.5.0"
invoke = ">=1.7.3"
jupyter = ">=1.0.0"
pytest = ">=7.1.3"
pytest-cov = ">=4.0.0"
nbmake = "^1.4.1"

# Style Dependencies
flake8 = "^5.0.4"
isort = "^5.11.4"
black = "^23.1.0"

# Documentation Dependencies
PyYaml = ">=6.0"
Sphinx = "==5.3.0"
argh = ">=0.26.2"
autodocsumm = ">=0.2.9"
ipython = ">=8.5.0"
m2r2 = ">=0.3.3"
nbsphinx = ">=0.8.8"
pydata-sphinx-theme = ">=0.10.1"

# Extra Dependency Bundles
[tool.poetry.extras]
examples = ["lightgbm"]

[tool.black]
line-length = 99
preview = true

[tool.isort]
profile = "black"
line_length = 99
skip = ["__init__.py"]

[build-system]
requires = ["poetry-core>=1.2.0"]
build-backend = "poetry.core.masonry.api"
